csdp/base_components/apps/app-proxy/_components/codefresh-base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cap-app-proxy
spec:
  ingressClassName: CF_RUNTIME_INGRESS_CLASS
  rules:
  - host: CF_RUNTIME_INGRESS_HOST
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: Prefix
